--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -24,6 +24,7 @@
   @media (--media-max-small) {
     text-align: center;
     margin-top: 3rem;
+    margin-bottom: 1em;
   }
 }
 
